--- a/ionic.project
+++ b/ionic.project
@@ -1,10 +1,18 @@
 {
   "name": "sftwapp",
-  "app_id": "",
+  "app_id": "02544036",
   "proxies": [
-      {
-        "path": "/api",
-        "proxyUrl": "http://sftw.be"
-      }
-    ]
+    {
+      "path": "/api",
+      "proxyUrl": "http://sftw.be"
+    }
+  ],
+  "gulpStartupTasks": [
+    "sass",
+    "watch"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*"
+  ]
 }
