--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "gulp-rename": "^1.2.0"
   },
   "devDependencies": {
+    "async": "^1.4.2",
     "bower": "^1.3.3",
+    "gulp-jshint": "^1.11.2",
     "gulp-util": "^2.2.14",
+    "jshint-stylish": "^2.0.1",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
