--- a/ionic.project
+++ b/ionic.project
@@ -4,7 +4,7 @@
   "proxies": [
     {
       "path": "/api",
-      "proxyUrl": "http://sftw.be"
+      "proxyUrl": "http://sftw.dev"
     }
   ],
   "gulpStartupTasks": [
